feat: add get /users path
